--- a/WebApp/WebApp/src/modules/pomodoro/pomodoro-item/pomodoro-item.scss
+++ b/WebApp/WebApp/src/modules/pomodoro/pomodoro-item/pomodoro-item.scss
@@ -1,6 +1,6 @@
-@import '/src/assets/colors';
-@import '/src/assets/interractions';
-@import '/src/assets/fonts';
+@import '../../../assets/colors';
+@import '../../../assets/interractions';
+@import '../../../assets/fonts';
 
 .side-button,
 .accent-button{
