--- a/WebApp/WebApp/src/modules/pages/pomodoro/pomodoro-item/pomodoro-item.scss
+++ b/WebApp/WebApp/src/modules/pages/pomodoro/pomodoro-item/pomodoro-item.scss
@@ -1,6 +1,6 @@
-@import '../../../assets/colors';
-@import '../../../assets/interractions';
-@import '../../../assets/fonts';
+@import '../../../../styles/colors';
+@import '../../../../styles/interractions';
+@import '../../../../styles/fonts';
 
 .side-button,
 .accent-button{
