--- a/WebApp/WebApp/src/modules/Pomodoros/page/pomodoroTimer/timerDisplay/timerDisplay.scss
+++ b/WebApp/WebApp/src/modules/Pomodoros/page/pomodoroTimer/timerDisplay/timerDisplay.scss
@@ -1,3 +1,7 @@
+@import 'src/styles/colors';
+@import 'src/styles/alignment';
+@import 'src/styles/interractions';
+
 .side-button,
 .accent-button {
   height: 100%;
