--- a/WebApp/WebApp/src/modules/Pomodoros/page/pomodoroTimer/timer/timer.scss
+++ b/WebApp/WebApp/src/modules/Pomodoros/page/pomodoroTimer/timer/timer.scss
@@ -8,7 +8,7 @@ border-radius: 10px;
     width: 220px;
     height: 220px;
     border-radius: 110px;
-    background: $foreground-accent-color;
+    background: $accent-color;
 
     &__inner-circle {
       @include flex-center-align;
