--- a/WebApp/WebApp/src/styles/colors.scss
+++ b/WebApp/WebApp/src/styles/colors.scss
@@ -1,16 +1,19 @@
 $background-primary-color: #1F1F1F;
 $background-secondary-color: #2B2B2B;
 
-$foreground-accent-color: #8764B8;
+$accent-color: #8764B8;
+$passive-color: #808080;
+$danger-color: #E74C3C;
+
 $foreground-primary-color: #FFFFFF;
-$foreground-secondary-color:#CCCCCC;
+$foreground-secondary-color: #CCCCCC;
 
 $step: 5;
 
 @function highlight($color, $level) {
-    @return adjust-color($color, $red: $step*$level, $green: $step*$level, $blue: $step*$level);
+  @return adjust-color($color, $red: $step*$level, $green: $step*$level, $blue: $step*$level);
 }
 
-@function downlight($color, $level){
+@function downlight($color, $level) {
   @return adjust-color($color, $red: -$step*$level, $green: -$step*$level, $blue: -$step*$level);
 }
