add: minor style editions, arrow element

--- a/WebApp/WebApp/src/styles/colors.scss
+++ b/WebApp/WebApp/src/styles/colors.scss
@@ -2,11 +2,12 @@ $background-primary-color: #1F1F1F;
 $background-secondary-color: #2B2B2B;
 
 $accent-color: #8764B8;
-$passive-color: #808080;
+$passive-color: #606060;
 $danger-color: #E74C3C;
+$disabled-color: #A0A0A0;
 
 $foreground-primary-color: #FFFFFF;
-$foreground-secondary-color: #CCCCCC;
+$foreground-secondary-color: #ECECEC;
 
 $step: 5;
 
