--- a/WebApp/WebApp/src/styles/components/inputs/buttons.scss
+++ b/WebApp/WebApp/src/styles/components/inputs/buttons.scss
@@ -3,8 +3,8 @@
 
 @mixin button-base($color) {
   @include interactive_background($color);
-  @include interactive_border(highlight($color, 8), 2px);
+  @include border(transparent);
+  @include interactive_border(highlight($color, 8));
   width: 100%;
   height: 100%;
-  border-radius: 10px;
 }
