--- a/WebApp/WebApp/src/styles/fonts.scss
+++ b/WebApp/WebApp/src/styles/fonts.scss
@@ -1,11 +1,16 @@
 @import "./colors.scss";
 
-*{
-    color: $foreground-primary-color;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+* {
+  color: $foreground-primary-color;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 @mixin title {
-    font-size: 24px;
-    line-height: 28px;
+  font-size: 24px;
+  line-height: 28px;
+}
+
+@mixin menu-title {
+  font-size: 36px;
+  line-height: 42px;
 }
