--- a/WebApp/WebApp/src/modules/Pomodoros/page/pomodoroTimer/pomodoroItem.scss
+++ b/WebApp/WebApp/src/modules/Pomodoros/page/pomodoroTimer/pomodoroItem.scss
@@ -22,13 +22,13 @@ $pomodoro-height: 350px;
   padding: 7px 15px;
 }
 
+$animation-durations: 0.5s;
+
 .settings {
-  //@include flex-center-align;
   height: 100vh;
   width: 100vw;
   top: 0;
   position: fixed;
-  //opacity: 0;
   z-index: -1;
   background-color: rgba(0, 0, 0, 0.4);
   transform: scale(1);
@@ -49,19 +49,27 @@ $pomodoro-height: 350px;
     width: 2*$pomodoro-width;
     height: 2*$pomodoro-height;
     position: absolute;
-    transition: all 1s ease-in-out;
+
     transform: scale(0.5);
+    //top: 0px;
+    //left: 0px;
+    transition: left 0.5s, top 0.5s, transform 0.5s 0.5s;
+    //transition-duration: 0.5s;
+    //transition-delay: 0s, 0s, 0.5s;
+    transition-timing-function: ease-in-out;
 
     &.on-display {
       top: calc(50% - 350px);
       left: calc(50% - 300px);
 
       transform: scale(1);
-      transition: top, left, transform;
-      transition-duration: 0.5s;
-      transition-delay: 0s, 0s, 0.5s;
-      transition-timing-function: ease-in-out;
+      //transition: left 0.5s 0.5s, top 0.5s 0.5s, transform 0.5s;
+      //transition: top, left, transform;
+      //transition-duration: 0.5s;
+      //transition-delay: 0s, 0s, 0.5s;
+      //transition-timing-function: ease-in-out;
     }
   }
 }
+
 
