--- a/WebApp/WebApp/src/modules/Pomodoros/page/pomodoro.scss
+++ b/WebApp/WebApp/src/modules/Pomodoros/page/pomodoro.scss
@@ -1,49 +1,16 @@
-@import "src/styles/alignment";
 @import "src/styles/colors";
-@import "src/styles/adaptive";
 
-.page-content {
+.pomodoro-page {
+  padding-top: 20px;
+
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+
+  align-content: flex-start;
   justify-content: center;
+  gap: 20px;
+
+  width: 100%;
   height: 100%;
-  background: $background-primary-color;
-
-  &__content-holder {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-content: flex-start;
-    justify-content: center;
-
-    @include for-phone-only{
-      padding: 10px;
-      column-gap: 10px;
-      row-gap: 20px;
-    }
-
-    @include for-tablet-portrait-up{
-      padding: 10px 20px;
-      column-gap: 10px;
-      row-gap: 20px;
-    }
-
-    @include for-tablet-landscape-up {
-      padding: 20px;
-      column-gap: 10px;
-      row-gap: 20px;
-    }
-
-    @include for-desktop-up {
-      padding: 40px 5%;
-      column-gap: 20px;
-      row-gap: 20px;
-    }
-
-    @include big-desktop {
-      padding: 40px 10%;
-      column-gap: 20px;
-      row-gap: 40px;
-    }
-
-  }
 }
