--- a/WebApp/WebApp/src/modules/Main/page/header/header-item/headerItem.scss
+++ b/WebApp/WebApp/src/modules/Main/page/header/header-item/headerItem.scss
@@ -1,5 +1,12 @@
+@import "src/styles/colors";
+
 .header-item {
-  color: black;
-  font-size: 24px;
-  margin-left: 40px;
+  color: $background-primary-color;
+  font-size: 32px;
+  padding: 7px;
+  border-radius: 10px;
+
+  &.selected {
+    box-shadow: rgba(31, 31, 31, 0.4) 0 20px 20px;
+  }
 }
