--- a/WebApp/WebApp/src/modules/Pomodoros/page/pomodoroTimer/settings/timerInput/timerInput.scss
+++ b/WebApp/WebApp/src/modules/Pomodoros/page/pomodoroTimer/settings/timerInput/timerInput.scss
@@ -1,7 +1,7 @@
-@import 'src/styles/colors';
-@import 'src/styles/interractions';
-@import 'src/styles/alignment';
-@import 'src/styles/fonts';
+@import '../../../../../../styles/colors';
+@import '../../../../../../styles/interractions';
+@import '../../../../../../styles/alignment';
+@import '../../../../../../styles/fonts';
 
 .arrow {
   width: 40px;
