--- a/WebApp/WebApp/src/modules/Pomodoros/page/pomodoroTimer/display/timerDisplay/timerDisplay.scss
+++ b/WebApp/WebApp/src/modules/Pomodoros/page/pomodoroTimer/display/timerDisplay/timerDisplay.scss
@@ -1,7 +1,7 @@
-@import 'src/styles/colors';
-@import 'src/styles/alignment';
-@import 'src/styles/interractions';
-@import 'src/styles/components/inputs/buttons';
+@import '../../../../../../styles/colors';
+@import '../../../../../../styles/alignment';
+@import '../../../../../../styles/interractions';
+@import '../../../../../../styles/components/inputs/buttons';
 
 @mixin control-button-base($color){
   @include button-base($color);
