--- a/WebApp/WebApp/src/modules/Pomodoros/page/pomodoroTimer/pomodoroItem.scss
+++ b/WebApp/WebApp/src/modules/Pomodoros/page/pomodoroTimer/pomodoroItem.scss
@@ -2,9 +2,7 @@
 @import '../../../../styles/interractions';
 @import '../../../../styles/alignment';
 @import '../../../../styles/fonts';
-
-$pomodoro-width: 300px;
-$pomodoro-height: 350px;
+@import "./general/pomodoroContainer";
 
 .pomodoro {
   @include background_hover($background-secondary-color);
@@ -13,7 +11,7 @@ $pomodoro-height: 350px;
 
   display: grid;
   grid-auto-columns: 1fr;
-  grid-template-rows: 30px 1fr 64px;
+  grid-template-rows: $pomodoro-title-row 1fr 64px;
 
   width: $pomodoro-width;
   height: $pomodoro-height;
