--- a/WebApp/WebApp/src/styles/adaptive.scss
+++ b/WebApp/WebApp/src/styles/adaptive.scss
@@ -1,3 +1,13 @@
+@import "alignment";
+
+.content-container {
+  @include center-horiz-margin;
+
+  width: 100%;
+  height: 100%;
+  max-width: 1440px;
+}
+
 @mixin for-phone-only {
   @media (max-width: 599px) {
     @content;
