--- a/WebApp/WebApp/src/styles/alignment.scss
+++ b/WebApp/WebApp/src/styles/alignment.scss
@@ -9,3 +9,8 @@ $header-height: 50px;
 @mixin center-horiz-margin {
   margin: 0 auto;
 }
+
+@mixin stretch-to-parent{
+  width: 100%;
+  height: 100%;
+}
