--- a/WebApp/WebApp/src/pages/components/header/header.scss
+++ b/WebApp/WebApp/src/pages/components/header/header.scss
@@ -13,7 +13,7 @@
   height: 100%;
   width: 100%;
   max-height: $header-height;
-  box-shadow: 0 0 1px rgba(255, 255, 255, 0.1), 0 2px 4px rgba(255, 255, 255, 0.2);
+  border-bottom: 1px solid $separator-color;
 
   &__outer-container {
     .app-icon {
