--- a/WebApp/WebApp/src/pages/pomodoro/pomodoroTimer/display/timer/timer.scss
+++ b/WebApp/WebApp/src/pages/pomodoro/pomodoroTimer/display/timer/timer.scss
@@ -1,14 +1,15 @@
-@import '../../../../../styles/colors';
-@import '../../../../../styles/alignment';
+@import 'src/styles/colors';
+@import 'src/styles/alignment';
+@import 'src/styles/appearance';
 
 .wrapper {
   @include flex-center-align;
-  border-radius: 10px;
+  border-radius: $border-radius;
 
   &__outer-circle {
     width: 220px;
     height: 220px;
-    border-radius: 110px;
+    border-radius: 50%;
     background: $accent-color;
 
     &__inner-circle {
@@ -20,7 +21,7 @@
       z-index: 20;
       width: 200px;
       height: 200px;
-      border-radius: 100px;
+      border-radius: 50%;
 
       font-size: 36px;
       line-height: 42px;
@@ -31,8 +32,8 @@
 
         &__ending-date {
           margin: 5px auto 0;
-          background: downlight($background-secondary-color, 2);
-          border-radius: 20px;
+          background: blackout($background-secondary-color, 2);
+          border-radius: $border-radius;
           font-size: 18px;
           width: 100px;
           text-align: center;
