--- a/WebApp/WebApp/src/pages/pomodoro/pomodoroTimer/pomodoroItem.scss
+++ b/WebApp/WebApp/src/pages/pomodoro/pomodoroTimer/pomodoroItem.scss
@@ -1,13 +1,16 @@
-@import '../../../styles/colors';
-@import '../../../styles/interractions';
-@import '../../../styles/alignment';
-@import '../../../styles/fonts';
+@import 'src/styles/colors';
+@import 'src/styles/interractions';
+@import 'src/styles/appearance';
+@import 'src/styles/alignment';
+@import 'src/styles/fonts';
 @import "general/pomodoroContainer";
 
 .pomodoro {
   @include background_hover($background-secondary-color);
   @include title;
-  border-radius: 10px;
+  @extend %base-interactive;
+
+  border-radius: $border-radius;
 
   display: grid;
   grid-auto-columns: 1fr;
@@ -40,9 +43,10 @@ $animation-durations: 0.35s;
   }
 
   &__content {
+    @extend %base-interactive;
+
     padding: 25px;
-    border-radius: 40px;
-    background-color: $background-primary-color;
+    border-radius: $border-radius-modal;
     width: 2*$pomodoro-width;
     height: 2*$pomodoro-height;
     position: absolute;
