fix + add packages and stores initial

--- a/WebApp/WebApp/src/components/input/iconButton.scss
+++ b/WebApp/WebApp/src/components/input/iconButton.scss
@@ -1,6 +1,9 @@
 @import "src/styles/colors";
 
 .icon-button{
+  display: flex;
+  align-items: center;
+  justify-content: center;
   &__icon {
     width: 100%;
     height: 100%;
