--- a/WebApp/WebApp/src/styles/colors.scss
+++ b/WebApp/WebApp/src/styles/colors.scss
@@ -1,6 +1,8 @@
 $background-primary-color: #1F1F1F;
 $background-secondary-color: #2B2B2B;
 
+$background-light-primary-color: #7f7f7f;
+
 $accent-color: #8764B8;
 $passive-color: #606060;
 $danger-color: #E74C3C;
