--- a/WebApp/WebApp/src/styles/appearance.scss
+++ b/WebApp/WebApp/src/styles/appearance.scss
@@ -3,6 +3,8 @@
 $border-radius-modal: 40px;
 $border-radius: 10px;
 
+$select-height: 60px;
+
 %base-interactive{
   border: 1px solid $separator-color;
   background-color: $background-secondary-color;
