--- a/WebApp/WebApp/src/styles/fonts.scss
+++ b/WebApp/WebApp/src/styles/fonts.scss
@@ -5,6 +5,11 @@
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+@mixin label {
+  font-size: 18px;
+  line-height: 20px;
+}
+
 @mixin title {
   font-size: 24px;
   line-height: 28px;
