--- a/WebApp/WebApp/src/pages/pomodoro/pomodoro.scss
+++ b/WebApp/WebApp/src/pages/pomodoro/pomodoro.scss
@@ -1,16 +1,7 @@
 @import "../../styles/colors";
+@import "src/styles/alignment";
 
 .pomodoro-page {
+  @include stretch-to-parent;
   padding-top: 20px;
-
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-
-  align-content: flex-start;
-  justify-content: center;
-  gap: 20px;
-
-  width: 100%;
-  height: 100%;
 }
