add: createPomodoro form + refactor

--- a/WebApp/WebApp/src/pages/pomodoro/components/timerConfigure/timerConfigure.scss
+++ b/WebApp/WebApp/src/pages/pomodoro/components/timerConfigure/timerConfigure.scss
@@ -1,7 +1,7 @@
-@import '../../../../../styles/colors';
-@import '../../../../../styles/interractions';
-@import '../../../../../styles/alignment';
-@import '../../../../../styles/fonts';
+@import '../../../../styles/colors';
+@import '../../../../styles/interractions';
+@import '../../../../styles/alignment';
+@import '../../../../styles/fonts';
 
 .timer-configure {
   @include flex-center-align;
