--- a/WebApp/WebApp/src/pages/pomodoro/components/timerInput/timerInput.scss
+++ b/WebApp/WebApp/src/pages/pomodoro/components/timerInput/timerInput.scss
@@ -1,7 +1,7 @@
-@import '../../../../../styles/colors';
-@import '../../../../../styles/interractions';
-@import '../../../../../styles/alignment';
-@import '../../../../../styles/fonts';
+@import '../../../../styles/colors';
+@import '../../../../styles/interractions';
+@import '../../../../styles/alignment';
+@import '../../../../styles/fonts';
 
 .arrow {
   width: 40px;
