--- a/WebApp/WebApp/src/pages/pomodoro/pomodoroTimer/pomodoroItem.scss
+++ b/WebApp/WebApp/src/pages/pomodoro/pomodoroTimer/pomodoroItem.scss
@@ -3,7 +3,8 @@
 @import 'src/styles/appearance';
 @import 'src/styles/alignment';
 @import 'src/styles/fonts';
-@import "general/pomodoroContainer";
+@import 'src/styles/components/modalBase';
+@import "../../../styles/components/pomodoroContainer";
 
 .pomodoro {
   @include background_hover($background-secondary-color);
@@ -23,41 +24,16 @@
   padding: 7px 15px;
 }
 
-$animation-durations: 0.35s;
-
 .settings {
-  height: 100vh;
-  width: 100vw;
-  top: 0;
-  position: fixed;
-  z-index: -1;
-  opacity: 0;
-  background-color: rgba(0, 0, 0, 0.4);
-  transition:
-          z-index $animation-durations $animation-durations,
-          opacity $animation-durations $animation-durations;
-
-  &.on-display {
-    z-index: 100;
-    opacity: 1;
-  }
+  @extend %modal-base;
 
   &__content {
-    @extend %base-interactive;
+    @extend %modal-content-base;
 
-    padding: 25px;
-    border-radius: $border-radius-modal;
-    width: 2*$pomodoro-width;
-    height: 2*$pomodoro-height;
-    position: absolute;
-
-    transform: scale(0.5);
     transition:
             left $animation-durations 0.05s,
             top $animation-durations 0.05s,
             transform $animation-durations $animation-durations;
-
-    transition-timing-function: ease-in-out;
 
     &.on-display {
       top: calc(50% - 350px);
