--- a/WebApp/WebApp/src/pages/pomodoro/pomodoroTimer/update/updatePomodoro.scss
+++ b/WebApp/WebApp/src/pages/pomodoro/pomodoroTimer/update/updatePomodoro.scss
@@ -1,7 +1,7 @@
-@import '../../../../../styles/colors';
-@import '../../../../../styles/alignment';
-@import '../../../../../styles/fonts';
-@import '../../../../../styles/components/inputs/buttons';
+@import '../../../../styles/colors';
+@import '../../../../styles/alignment';
+@import '../../../../styles/fonts';
+@import '../../../../styles/components/inputs/buttons';
 
 @mixin configure-button-base($color) {
   @include button-base($color);
