--- a/WebApp/WebApp/src/pages/components/header/header.scss
+++ b/WebApp/WebApp/src/pages/components/header/header.scss
@@ -23,9 +23,10 @@
     .navigation-items {
       display: flex;
       justify-content: space-around;
+      font-size: 32px;
 
       width: 100%;
-      max-width: 400px;
+      max-width: 500px;
     }
   }
 }
